# clarity

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  VALIDATION_REPORT.md  netlify.toml  render.yaml
backend/: Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
backend/app/: __init__.py  counterfactual_router.py  demo_router.py  health.py  logging_config.py  main.py
backend/app/clarity/: __init__.py  artifact_loader.py  counterfactual_engine.py  counterfactual_orchestrator.py  evidence_overlay.py  gradient_engine.py  image_utils.py  manifest_schema_family.py  medgemma_runner.py  metrics.py  metrics_engine.py  perturbation_registry.py  surfaces.py  (+9 more)
backend/scripts/: m13_real_sweep.py  m15_api_validation.py  m15_real_ui_sweep.py
backend/tests/: __init__.py  test_artifact_contract.py  test_artifact_loader.py  test_boundary_contract.py  test_cache.py  test_counterfactual_api.py  test_counterfactual_engine.py  test_counterfactual_orchestrator.py  test_demo_router.py  test_evidence_overlay.py  test_gradient_engine.py  test_health.py  test_logging.py  test_m03_guardrails.py  test_m22_operating_manual.py  test_m24_readiness_verdict.py  test_m25_readiness_upgrade.py  test_metrics_engine.py  test_perturbations.py  test_public_surface_contract.py  test_r2l_runner.py  test_readiness_pack.py  test_real_adapter_determinism.py  test_report_determinism.py  test_report_image_renderer.py  test_report_model.py  test_report_router.py  test_rich_generation_unit.py  test_rich_mode_determinism.py  test_supported_combinations.py  test_surface_engine.py  test_sweep_models.py  test_sweep_orchestrator.py
(+255 files in other folders)
